# JottaEcom---Uma-aventura-Ecommerce-com-Python

./: .gitignore  README.md
Doc/: Comando de configuração de ambiente.docx  tabela produtos.txt  ~$mando de configuração de ambiente.docx
JottaEcom/: .coverage  pyproject.toml  requirements.txt
JottaEcom/jottaecom/backend/: main.py
JottaEcom/jottaecom/backend/db_connectors/: sql_alchemy_manager.py
JottaEcom/jottaecom/backend/entities/: produto_entitie.py  usuario_entitie.py
JottaEcom/jottaecom/backend/models/: produto_model.py
JottaEcom/jottaecom/backend/sgbd/: teste.db
JottaEcom/tests/: test_sql_alchemy_manager.py
